src/About.css
/* About.css */

.about-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 20px;
  text-align: left;
  height: 90vh;
  background-attachment: fixed;
}

.about-header {
  position: relative;
}

.about-header h2 {
  font-size: 36px; /* Match the font size of the MyWork header */
  margin-bottom: 10px; /* Match the margin-bottom of the MyWork header */
  padding: 10px 20px;
  background-color: white;
}

.about-header .header-line::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 100px;
  height: 4px;
  background-color: purple;
  border-radius: 1px;
}

.about-content {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 20px; /* Adjusted margin to separate the content from the header */
}

.about-image {
  flex: 1;
  margin-right: 20px;
}

.about-text {
  flex: 2;
}

.about-text p {
  font-size: 18px;
  color: #555;
}

